package net.nemerosa.ontrack.extensions.environments

import net.nemerosa.ontrack.model.structure.Project

data class Slot(
    val id: String,
    val environment: Environment,
    val description: String?,
    val project: Project,
    val qualifier: String,
) {
    companion object {
        const val DEFAULT_QUALIFIER = ""
    }

    override fun toString(): String =
        if (qualifier != DEFAULT_QUALIFIER) {
            "${environment.name}/${project.name}/${qualifier}"
        } else {
            "${environment.name}/${project.name}"
        }
}
